// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenIcon TokenIcon MLN to match snapshot 1`] = `
<div
  className="sc-bdVaJa erQgzz"
  color="#232332"
>
  <svg>
    mln.svg
  </svg>
</div>
`;

exports[`TokenIcon TokenIcon ZRX to match snapshot 1`] = `
<div
  className="sc-bdVaJa erQgzz"
  color="#232332"
>
  <svg>
    zrx.svg
  </svg>
</div>
`;

exports[`TokenIcon Without token 1`] = `
<div
  className="sc-bdVaJa erQgzz"
  color="#232332"
>
  <label
    className="sc-bwzfXH hnfLbt"
  >
    TEST
  </label>
</div>
`;
